--- a/DomainModels/DomainModels.csproj
+++ b/DomainModels/DomainModels.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>DomainModels</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -60,17 +60,23 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserFavoriteResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IOperationRepository.cs" />
+    <Compile Include="Repository\IOperationResultRepository.cs" />
+    <Compile Include="Repository\IUserFavoriteResultRepository.cs" />
     <Compile Include="Repository\IUserRepository.cs" />
+    <Compile Include="Repository\OperationRepository.cs" />
+    <Compile Include="Repository\OperationResultRepository.cs" />
+    <Compile Include="Repository\UserFavoriteResultRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="App_Data\reactcalc.mdf">
+    <Content Include="App_Data\reactcalcdb.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="App_Data\reactcalc_log.ldf">
+    <Content Include="App_Data\reactcalcdb_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>reactcalc.mdf</DependentUpon>
+      <DependentUpon>reactcalcdb.mdf</DependentUpon>
     </Content>
   </ItemGroup>
   <ItemGroup>
