--- a/DomainModels/DomainModels.csproj
+++ b/DomainModels/DomainModels.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="EF\CalcContext.cs" />
     <Compile Include="EF\UserRepository.cs" />
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\OperationResult.cs" />
     <Compile Include="Models\User.cs" />
