--- a/WebCalc/Web.config
+++ b/WebCalc/Web.config
@@ -18,6 +18,9 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <identity impersonate="false" />
+    <authentication mode="Forms">
+      <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
