--- a/DomainModels/DomainModels.csproj
+++ b/DomainModels/DomainModels.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\CalcContext.cs" />
+    <Compile Include="EF\ORRepository.cs" />
     <Compile Include="EF\UserRepository.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\Operation.cs" />
@@ -72,8 +73,10 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserFavoriteResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IEntityRepository.cs" />
     <Compile Include="Repository\IOperationRepository.cs" />
     <Compile Include="Repository\IOperationResultRepository.cs" />
+    <Compile Include="Repository\IORRepository.cs" />
     <Compile Include="Repository\IUserFavoriteResultRepository.cs" />
     <Compile Include="Repository\IUserRepository.cs" />
     <Compile Include="Repository\OperationRepository.cs" />
