--- a/DomainModels/DomainModels.csproj
+++ b/DomainModels/DomainModels.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\CalcContext.cs" />
+    <Compile Include="EF\LikeRepository.cs" />
     <Compile Include="EF\OperationRepository.cs" />
     <Compile Include="EF\ORRepository.cs" />
     <Compile Include="EF\UserRepository.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Models\UserFavoriteResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IEntityRepository.cs" />
+    <Compile Include="Repository\ILikeRepository.cs" />
     <Compile Include="Repository\IOperationRepository.cs" />
     <Compile Include="Repository\IOperationResultRepository.cs" />
     <Compile Include="Repository\IORRepository.cs" />
